fix stupid mistake

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
    "name":"node-log",
    "description":"Simple logger for NodeJS",
-   "version":"0.0.3",
+   "version":"0.0.4",
    "homepage":"http://github.com/wearefractal/node-log",
    "repository":"git://github.com/wearefractal/node-log.git",
    "author":"Fractal <contact@wearefractal.com> (http://wearefractal.com/)",
-   "main":"./lib/logger.coffee",
+   "main":"./lib/index.js",
 
    "dependencies":{
       "coffee-script":"*",
